saava: cconfigured loguru logging

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-phonenumber-field = "*"
 phonenumbers = "*"
 drf-spectacular = "*"
 pillow = "*"
+loguru = "==0.7.3"
 
 [dev-packages]
 watchfiles = "==0.22.0"
