--- a/local.yml
+++ b/local.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - /.envs/.env.local
+      - ./.envs/.env.local
     depends_on:
       - postgres
       - mailpit
