--- a/local.yml
+++ b/local.yml
@@ -13,6 +13,8 @@ services:
     depends_on:
       - postgres
       - mailpit
+      - rabbitmq
+      - redis
     command: /start.sh
     networks:
       - banker_local_nw
@@ -45,6 +47,65 @@ services:
     networks:
       - banker_local_nw
 
+  redis:
+    image: redis:7.0-alpine3.19
+    command: redis-server --appendonly yes
+    networks:
+        - banker_local_nw
+
+  rabbitmq:
+      image: rabbitmq:3-management
+      ports:
+        - "5672:5672"
+        - "15672:15672"
+      volumes:
+        - rabbitmq_data:/var/lib/rabbitmq
+        - rabbitmq_log:/var/lib/rabbitmq
+      networks:
+        - banker_local_nw
+
+  celeryworker:
+      <<: *api
+      ports: []
+      command:
+        - /start-celeryworker.sh
+
+  flower:
+      <<: *api
+      ports:
+        - "5557:5557"
+      volumes:
+        - flower_db:/app/flower_db
+      command: /start-flower.sh
+
+  celerybeat:
+      build:
+        context: .
+        dockerfile: ./docker/local/django/Dockerfile
+      command: /start-celerybeat.sh
+      env_file:
+        - ./.envs/.env.local
+      depends_on:
+        - redis
+        - postgres
+        - rabbitmq
+      networks:
+          - banker_local_nw
+  nginx:
+      build:
+          context: ./docker/local/nginx
+          dockerfile: Dockerfile
+      restart:  always
+      ports:
+        - "8080:80"
+      volumes:
+        - ./staticfiles:/app/staticfiles
+        - logs_store:/var/log/nginx
+      depends_on:
+        - api
+      networks:
+        - banker_local_nw
+
 networks:
     banker_local_nw:
         external: true
@@ -52,3 +113,6 @@ networks:
 volumes:
   banker_local_db:
   banker_mailpit_db:
+  logs_store:
+  rabbitmq_log:
+  flower_db:
